--- a/Sistemas/Mercado/pom.xml
+++ b/Sistemas/Mercado/pom.xml
@@ -10,11 +10,17 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.29</version>
         </dependency>
+        <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
+            <version>1.9.2</version>
+            <classifier>lite</classifier>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <exec.mainClass>com.sistema.mercado.Mercado</exec.mainClass>
+        <exec.mainClass>view.TelaLogin</exec.mainClass>
     </properties>
 </project>
