--- a/Sistemas/Mercado/pom.xml
+++ b/Sistemas/Mercado/pom.xml
@@ -16,6 +16,11 @@
             <version>1.9.2</version>
             <classifier>lite</classifier>
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE130</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
